--- a/SlideshowApp/Base.lproj/Main.storyboard
+++ b/SlideshowApp/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -17,17 +18,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zI3-av-4C8">
-                                <rect key="frame" x="140" y="242" width="40" height="41.5"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="41.5" id="MlC-GP-vG3"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <state key="normal" title="再生"/>
-                                <connections>
-                                    <action selector="playStopAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BJb-cq-3Eu"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mi8-Zs-vkU">
                                 <rect key="frame" x="238" y="240" width="40" height="44.5"/>
                                 <constraints>
@@ -56,6 +46,17 @@
                                     <constraint firstAttribute="height" constant="200" id="Kgb-Tz-YCf"/>
                                 </constraints>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zI3-av-4C8">
+                                <rect key="frame" x="140" y="242" width="40" height="41.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="41.5" id="MlC-GP-vG3"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="再生"/>
+                                <connections>
+                                    <action selector="playStopAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BJb-cq-3Eu"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
@@ -72,6 +73,7 @@
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                     <connections>
+                        <outlet property="backbutton" destination="1jn-9f-Sp2" id="fSE-qh-9pI"/>
                         <outlet property="imageArea" destination="WLj-nK-9bS" id="QdV-Aq-5g5"/>
                         <outlet property="nextbutton" destination="mi8-Zs-vkU" id="C2K-5i-u3p"/>
                         <outlet property="playstopbutton" destination="zI3-av-4C8" id="mnt-px-zEv"/>
@@ -84,7 +86,7 @@
         <!--Result View Controller-->
         <scene sceneID="yLF-l9-sjc">
             <objects>
-                <viewController storyboardIdentifier="DetailedImage" id="j9e-fn-PGE" customClass="ResultViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="DetailedImage" id="j9e-fn-PGE" customClass="ResultViewController" customModule="SlideshowApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="r83-zM-v80"/>
                         <viewControllerLayoutGuide type="bottom" id="nt2-2W-gkd"/>
@@ -93,23 +95,69 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HdR-vl-E9s">
-                                <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HdR-vl-E9s">
+                                <rect key="frame" x="-4" y="20" width="328" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="FKt-9K-gYv"/>
+                                </constraints>
                                 <items>
                                     <navigationItem title="画像" id="nvx-x4-VB1">
-                                        <barButtonItem key="leftBarButtonItem" systemItem="stop" id="Ugz-ZL-xXd"/>
+                                        <barButtonItem key="leftBarButtonItem" systemItem="stop" id="Ugz-ZL-xXd">
+                                            <connections>
+                                                <segue destination="eeg-eB-ezh" kind="unwind" unwindAction="unwind:" id="AQX-DW-LJ6"/>
+                                            </connections>
+                                        </barButtonItem>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mqc-q6-bhK">
+                                <rect key="frame" x="0.0" y="436" width="320" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="Xw5-G4-hWa"/>
+                                </constraints>
+                                <items>
+                                    <barButtonItem title="Fit" id="YDp-6X-R0k">
+                                        <connections>
+                                            <action selector="fitButton:" destination="j9e-fn-PGE" id="7SS-Gg-uld"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="4Ng-vQ-wXV"/>
+                                    <barButtonItem title="Fill" id="eks-55-37x">
+                                        <connections>
+                                            <action selector="fillButton:" destination="j9e-fn-PGE" id="9J9-3J-QZZ"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NLB-k7-qGo">
+                                <rect key="frame" x="0.0" y="64" width="320" height="372"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="HdR-vl-E9s" secondAttribute="trailing" constant="-20" id="CNo-wG-oK7"/>
+                            <constraint firstAttribute="trailing" secondItem="mqc-q6-bhK" secondAttribute="trailing" id="EER-VN-aDJ"/>
+                            <constraint firstAttribute="trailing" secondItem="NLB-k7-qGo" secondAttribute="trailing" id="JNB-Qx-FpP"/>
+                            <constraint firstItem="NLB-k7-qGo" firstAttribute="leading" secondItem="GkY-hG-b9S" secondAttribute="leading" id="MDX-vF-RcS"/>
+                            <constraint firstItem="HdR-vl-E9s" firstAttribute="leading" secondItem="GkY-hG-b9S" secondAttribute="leadingMargin" constant="-20" id="Ng6-60-ohf"/>
+                            <constraint firstItem="HdR-vl-E9s" firstAttribute="top" secondItem="r83-zM-v80" secondAttribute="bottom" id="Wpk-wn-ALB"/>
+                            <constraint firstItem="nt2-2W-gkd" firstAttribute="top" secondItem="mqc-q6-bhK" secondAttribute="bottom" id="ZXi-Xl-t1m"/>
+                            <constraint firstItem="NLB-k7-qGo" firstAttribute="top" secondItem="HdR-vl-E9s" secondAttribute="bottom" id="c0t-sZ-nos"/>
+                            <constraint firstItem="mqc-q6-bhK" firstAttribute="top" secondItem="NLB-k7-qGo" secondAttribute="bottom" id="i3M-O8-3dH"/>
+                            <constraint firstItem="mqc-q6-bhK" firstAttribute="leading" secondItem="GkY-hG-b9S" secondAttribute="leading" id="ifj-9V-0t7"/>
+                            <constraint firstItem="HdR-vl-E9s" firstAttribute="top" secondItem="r83-zM-v80" secondAttribute="bottom" id="wMH-9L-La6"/>
+                        </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                     <connections>
-                        <outlet property="fileTitle" destination="HdR-vl-E9s" id="OYT-oz-WYM"/>
+                        <outlet property="detailedFileName" destination="nvx-x4-VB1" id="QgF-Ow-5cu"/>
+                        <outlet property="detailedImage" destination="NLB-k7-qGo" id="q77-eC-f3c"/>
+                        <outlet property="fill" destination="eks-55-37x" id="lpZ-Qx-Ugb"/>
+                        <outlet property="fit" destination="YDp-6X-R0k" id="WA6-If-szQ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JQq-gs-KwJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="eeg-eB-ezh" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="726" y="367"/>
         </scene>
